[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpuwidget"
version = "0.1.1"
description = "A Jupyter widget for monitoring NVIDIA GPUs."
readme = "README.md"
authors = [
    { name = "Wenbo Pan", email = "pixelwenbo@gmail.com" },
]
license = { file = "LICENSE" }
keywords = ["jupyter", "gpu", "monitoring", "widget", "nvidia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Jupyter",
]

dependencies = [
    "ipywidgets>=7.6",
    "gpustat>=1.0",
]

[project.urls]
homepage = "https://github.com/bmpixel/gpuwidget"
repository = "https://github.com/bmpixel/gpuwidget"
documentation = "https://github.com/bmpixel/gpuwidget#readme"

[tool.isort]
profile = "black"
